# platform.upstream.gsignond

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  common.mk  config.h.in  configure  configure.ac  gsignond-uninstalled.pc.in  gsignond.conf  gsignond.conf.in  gsignond.pc.in
data/: gsignond.service
dists/debian/: README.Debian  changelog  control  copyright  gsignond-dev.install  gsignond-doc.install  install  postinst  postrm  preinst  prerm  rules
dists/rpm/: gsignond-suse.spec  gsignond-tizen.changes  gsignond-tizen.spec
docs/: Makefile.am  Makefile.in  building.xml  gsignond-docs.sgml  gsignond-sections.txt  gsignond.types  plugin-loaders-overview.xml
docs/html/: GSignondAccessControlManager.html  GSignondConfig.html  GSignondCredentials.html  GSignondDigestPlugin.html  GSignondExtension.html  GSignondPasswordPlugin.html  GSignondPlugin.html  GSignondSecretStorage.html  GSignondSsoTestPlugin.html  GSignondStorageManager.html  annotation-glossary.html  api-index-full.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  (+16 more)
packaging/: archive.sh  gsignond-cleandb  gsignond-suse.spec  gsignond-tizen.spec  gsignond.changes  gsignond.spec
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  gsignond-access-control-manager.c  gsignond-config-db.h  gsignond-config-general.h  gsignond-config.c  gsignond-config.h  gsignond-credentials.c  gsignond-credentials.h  gsignond-dictionary.c  gsignond-disposable.c  gsignond-disposable.h  gsignond-enum.c.template  gsignond-enum.h.template  gsignond-error.c  gsignond-error.h  gsignond-extension-interface.c  gsignond-identity-info-internal.h  gsignond-identity-info.c  gsignond-identity-info.h  gsignond-log.h  gsignond-pipe-stream.c  gsignond-plugin-enum-types.c  gsignond-plugin-enum-types.h  gsignond-plugin-interface.c  gsignond-plugin-loader.c  gsignond-secret-storage.c  gsignond-secret-storage.h  gsignond-security-context.c  gsignond-session-data.c  gsignond-signonui-data.c  gsignond-storage-manager.c  gsignond-utils.c
src/common/db/: Makefile.am  Makefile.in  gsignond-db-defines.h  gsignond-db-error.c  gsignond-db-error.h  gsignond-db-secret-database.c  gsignond-db-secret-database.h  gsignond-db-sql-database-private.h  gsignond-db-sql-database.c  gsignond-db-sql-database.h  gsignond-secret-storage.c
src/daemon/: Makefile.am  Makefile.in  gsignond-auth-service-iface.c  gsignond-auth-service-iface.h  gsignond-auth-session-iface.c  gsignond-auth-session-iface.h  gsignond-auth-session.c  gsignond-auth-session.h  gsignond-config-db.h  gsignond-config-dbus.h  gsignond-config.c  gsignond-config.h  gsignond-daemon.c  gsignond-daemon.h  gsignond-disposable.c  gsignond-disposable.h  gsignond-identity-enum-types.c  gsignond-identity-enum-types.h  gsignond-identity-iface.c  gsignond-identity-iface.h  gsignond-identity.c  gsignond-identity.h  gsignond-signonui-proxy.c  gsignond-signonui-proxy.h  gsignond-types.h  main.c
src/daemon/db/: Makefile.am  Makefile.in  gsignond-db-credentials-database.c  gsignond-db-credentials-database.h  gsignond-db-error.c  gsignond-db-error.h  gsignond-db-metadata-database.c  gsignond-db-metadata-database.h  gsignond-db-secret-cache.c  gsignond-db-secret-cache.h
src/daemon/dbus/: Makefile.am  Makefile.in  gsignond-dbus-auth-service-adapter.c  gsignond-dbus-auth-service-adapter.h  gsignond-dbus-auth-session-adapter.c  gsignond-dbus-auth-session-adapter.h  gsignond-dbus-identity-adapter.c  gsignond-dbus-identity-adapter.h  gsignond-dbus-server.c  gsignond-dbus-server.h  gsignond-dbus-signonui-adapter.c  gsignond-dbus-signonui-adapter.h  gsignond-dbus.h
src/daemon/dbus/interfaces/: com.google.code.AccountsSSO.SingleSignOn.AuthService.xml  com.google.code.AccountsSSO.gSingleSignOn.AuthService.xml  com.google.code.AccountsSSO.gSingleSignOn.RemotePlugin.xml  com.google.code.AccountsSSO.gSingleSignOn.UI.Dialog.xml  com.google.code.AccountsSSO.gSingleSignOn.UI.xml  org.tizen.SSO.singlesignonui.xml
src/daemon/dbus/services/: com.google.code.AccountsSSO.SingleSignOn.service.in  com.google.code.AccountsSSO.gSingleSignOn.service.in
src/daemon/plugins/: Makefile.am  Makefile.in  gsignond-plugin-proxy-factory.c  gsignond-plugin-proxy-factory.h  gsignond-plugin-proxy.c  gsignond-plugin-proxy.h  gsignond-plugin-remote-private.h  gsignond-plugin-remote.c  gsignond-plugin-remote.h
src/daemon/plugins/plugind/: Makefile.am  gsignond-plugin-daemon.c  gsignond-plugin-daemon.h  main.c
src/extensions/test/: Makefile.am  Makefile.in  test-access-control-manager.c  test-access-control-manager.h  test-extension.c  test-extension.h  test-secret-storage.c  test-secret-storage.h  test-storage-manager.c  test-storage-manager.h
src/extensions/tizen/: Makefile.am  Makefile.in  tizen-access-control-manager.c  tizen-access-control-manager.h  tizen-extension.c  tizen-extension.h  tizen-secret-storage.c  tizen-secret-storage.h  tizen-storage-manager.c  tizen-storage-manager.h
src/gplugind/: Makefile.am  Makefile.in  gsignond-plugin-daemon.c  gsignond-plugin-daemon.h  gsignond-plugin-loader.c  gsignond-plugin-loader.h  main.c
src/plugins/digest/: Makefile.am  Makefile.in  gsignond-digest-plugin.c  gsignond-digest-plugin.h
src/plugins/password/: Makefile.am  Makefile.in  gsignond-password-plugin.c  gsignond-password-plugin.h
src/plugins/ssotest/: Makefile.am  Makefile.in  gsignond-ssotest-plugin.c  gsignond-ssotest-plugin.h
test/: Makefile.am  Makefile.in  test.c  valgrind.supp  valgrind_common.mk
test/common/: Makefile.am  Makefile.in  commontest.c
test/daemon/: Makefile.am  Makefile.in  daemon-test.c  daemontest.conf  gsignond-dbus.conf.in  test-daemon-setup.sh
test/daemon/services/: com.google.code.AccountsSSO.gSingleSignOn.service.in
test/db/: Makefile.am  Makefile.in  dbtest.c  test.c
test/passwordplugin/: Makefile.am  passwordplugintest.c
test/plugins/: Makefile.am  Makefile.in  digestplugintest.c  passwordplugintest.c  pluginproxytest.c  pluginremotetest.c
tools/: archive.sh  prepare-tizen.sh  run-tests.sh  setup-and-start-daemon.sh
(+25 files in other folders)
